fix custom buttons align for Live mode

--- a/src/css/videojs-ios-skin.less
+++ b/src/css/videojs-ios-skin.less
@@ -46,6 +46,7 @@ color: @ios-primary-color;
     padding: 0 8px;
 }
 .vjs-custom-control-spacer {
+    display: flex;
     margin-right: auto;
 }
 .vjs-ios-control-box {
